# logan-mcp-server

./: .env.example  .gitignore  .gitleaksignore  README.md  conftest.py  pyproject.toml  run_tests.py
.github/workflows/: tests.yml
docs/: cron-scheduling.md  demo-guide.md  future-learning-dimensions.md  windows-setup.md
docs/argus/: argus-implementation-guide-for-claude-review.md  argus-poc-setup-guide.md
docs/phase-2/: backlog.md  feature-catalog.md  roadmap.md
docs/reviews/: 2026-04-22-mcp-builder-review.md
scripts/: oci-initial-setup.sh  promote_queries.py  run.sh  setup_oel9.sh  update.sh  validate_rare_query.py
src/oci_logan_mcp/: __init__.py  __main__.py  _mss_payload.py  alarm_postmortem.py  alarm_service.py  audit.py  auth.py  budget_tracker.py  cache.py  (+48 more)
tests/: __init__.py  conftest.py  test_alarm_postmortem.py  test_alarm_service.py  test_audit.py  test_auth.py  test_budget_tracker.py  test_cache.py  test_catalog.py  test_client.py  test_config.py  test_confirmation.py  test_context_manager.py  test_dashboard_service.py  test_diff_tool.py  test_export.py  test_file_lock.py  test_fuzzy_match.py  test_handlers.py  test_ingestion_health.py  test_investigate.py  test_investigation_recipes.py  test_log_source_builder.py  test_main_cli.py  test_mss_payload.py  test_multi_user_integration.py  test_next_steps.py  test_notification_service.py  test_parser_triage.py  test_pivot_tool.py  test_playbook_recorder.py  test_playbook_store.py  test_preferences.py  test_promote_queries.py  test_query_auto_saver.py  test_query_engine.py  test_query_estimator.py  test_query_logger.py  test_query_validator.py  test_rare_events.py  (+20 more)
windows-setup/: Double-Click-to-Install.cmd  logan-mcp.ps1  windows-setup.html
(+36 files in other folders)
