[project]
name = "oci-logan-mcp"
version = "1.0.0"
description = "MCP Server for natural language interaction with OCI Log Analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OCI Log Analytics MCP Team"}
]
keywords = ["oci", "oracle", "log-analytics", "mcp", "observability", "monitoring"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/rishabh-ghosh24/logan-mcp-server"
Repository = "https://github.com/rishabh-ghosh24/logan-mcp-server"
Issues = "https://github.com/rishabh-ghosh24/logan-mcp-server/issues"

dependencies = [
    "mcp>=1.0.0",
    "oci>=2.90.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "rapidfuzz>=3.0.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
oci-logan-mcp = "oci_logan_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oci_logan_mcp"]
